--- a/CSS/bootstrap/bootstrap basics.html
+++ b/CSS/bootstrap/bootstrap basics.html
@@ -13,12 +13,14 @@
 <body>
     <div class="container-fluid">
         <h1>Hello</h1>
-        <h1 class="display-1">Display <span class="badge badge-pill badge-success">1</span></h1>
-        <h1 class="display-2">Display 2</h1>
-        <h1 class="display-3">Display 3</h1>
-        <h1 class="display-4">Display 4</h1>
-        <h2 class="display-2">Hello</h2>
-        <div class="btn-group" role="group" aria-label="Basic example">
+        <h1 class="display-1">Lets </h1>
+        <h1 class="display-2">Learn</h1>
+        <h1 class="display-3">bootstrap</h1>
+        <h1 class="display-4">These are diff size of h1</h1>
+        <h2 class="display-6">"Hello this is an h2 with a badge"<span
+                class="badge badge-pill badge-success">bdg-p</span>
+        </h2>
+        <div class="btn-group " role="group" aria-label="Basic example">
             <button type="button" class="btn btn-secondary">Left</button>
             <button type="button" class="btn btn-secondary">Middle</button>
             <button type="button" class="btn btn-secondary">Right</button>
@@ -46,7 +48,98 @@
             <p class="mb-0"> A well-known quote, contained in a blockquote element.</p>
             <footer class="blockquote-footer"> Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
+        <h2 class="display-4">Responsive Grid</h2>
+        <div class="row">
+            <div class="col-md-6 col-xl-3 bg-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                perferendis
+                minima,
+                cupiditate magni pariatur mollitia hic quas corporis, debitis sapiente quidem velit earum veniam unde
+                voluptate iure quaerat possimus cumque.</div>
+            <div class="col-md-6 col-xl-3 bg-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+                explicabo
+                nulla
+                ducimus
+                id quaerat quo non illum sit libero optio facere, itaque officia dicta earum, est adipisci ullam magni
+                iusto!</div>
+            <div class="col-md-6 col-xl-3 bg-success">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                perferendis
+                minima,
+                cupiditate magni pariatur mollitia hic quas corporis, debitis sapiente quidem velit earum veniam unde
+                voluptate iure quaerat possimus cumque.</div>
+            <div class="col-md-6 col-xl-3 bg-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+                explicabo
+                nulla
+                ducimus
+                id quaerat quo non illum sit libero optio facere, itaque officia dicta earum, est adipisci ullam magni
+                iusto!</div>
+        </div>
+        <h2 class="display-6">Grid Alignment</h2>
+        <div class="row align-items-center">
+            <div class="col-md-6 col-xl-3 bg-info align-self-start">Lorem ipsum dolor sit, amet consectetur adipisicing
+                elit. Placeat
+                adipisci rem provident eos voluptates molestias assumenda reiciendis ratione, consectetur debitis quo,
+                culpa, quia ipsam blanditiis commodi non expedita. Voluptatem, repellendus. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Animi suscipit maiores ipsa quasi hic, impedit cumque quo, voluptas
+                consequuntur esse ullam? Iusto, quia id! Obcaecati necessitatibus quas accusamus fuga odit?
+                Sunt incidunt aspernatur ullam explicabo dolorum, voluptatibus architecto laborum quo iste autem dolorem
+                consequatur dolor harum quibusdam voluptate numquam suscipit exercitationem est voluptatem, voluptas
+                omnis ex totam sapiente. Atque, harum!
+                Quasi esse accusamus voluptatum, ex minima iste tempora libero odit consequuntur ipsum tempore
+                consectetur? Dolores excepturi illum hic perspiciatis nihil pariatur debitis iusto nesciunt ratione!
+                Laudantium tempore quidem excepturi debitis.</div>
+            <div class="col-md-6 col-xl-3 bg-primary align-self-end">Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Placeat
+                adipisci rem provident eos voluptates molestias assumenda reiciendis ratione, consectetur debitis quo,
+                culpa, quia ipsam blanditiis commodi non expedita. Voluptatem, repellendus. Lorem, ipsum dolor sit amet
+                consectetur adipisicing elit. Perferendis architecto velit officia facere tempora provident?
+                Perspiciatis assumenda, vitae ipsum natus officiis mollitia veritatis odit magni ducimus debitis
+                voluptatibus excepturi at.
+                Laudantium molestias unde itaque officia vero incidunt maiores, commodi inventore nostrum aliquam id
+                deleniti minus, voluptatibus ipsam aspernatur eveniet cum iure tempora blanditiis velit corporis debitis
+                error voluptatum nihil? Cum!
+            </div>
+            <div class="col-md-6 col-xl-3 bg-success">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
+                adipisci rem provident eos voluptates molestias assumenda reiciendis ratione, consectetur debitis quo,
+                culpa, quia ipsam blanditiis commodi non expedita. Voluptatem, repellendus. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Aut rem reprehenderit consectetur amet magni eos, soluta blanditiis labore
+                natus beatae voluptate excepturi, deserunt quos. Illo sapiente quis dolorem suscipit est.</div>
+            <div class="col-md-6 col-xl-3 bg-secondary align-self-end">Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Placeat adipisci rem provident eos voluptates molestias assumenda reiciendis ratione,
+                consectetur
+                debitis quo, culpa, quia ipsam blanditiis commodi non expedita. Voluptatem, repellendus. Lorem ipsum
+                dolor sit amet, consectetur adipisicing elit. Consectetur tempora tempore esse ratione magnam, suscipit
+                nam quidem animi, possimus reprehenderit vero fugit, sapiente natus beatae culpa unde non expedita
+                saepe.</div>
+        </div>
+        <h2 class="display-6 display-center">Justify content</h2>
+        <div class="row  justify-content-center">
+            <div class="col col-4 bg-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam magnam
+                officia,
+                temporibus error rem odio, iusto excepturi non incidunt laborum sunt deserunt dolorum
+                inventore adipisci vero dignissimos veritatis est porro.</div>
+        </div>
+        <h2 class="display-4">Img Responsive Grid</h2>
+        <div class="row">
+            <div class="col-xl-4 col-md-6">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1589595363745-d842812a9db7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+                    alt="">
+            </div>
+
+            <div class="col-xl-4 col-md-6">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1511692277506-3be3a7ab1686?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+                    alt="">
+            </div>
+            <div class="col-xl-4 col-md-6">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1497206365907-f5e630693df0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+                    alt="">
+            </div>
+        </div>
     </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
