--- a/JavaScript/main_index.html
+++ b/JavaScript/main_index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For Of Loops</title>
+    <title>For Loops</title>
 </head>
 
 <body>
 
-    <script src="app.js"></script>
+    <script src=".js"></script>
 </body>
 
 </html>
