--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -7,7 +7,7 @@
     <title>Forms tutorial</title>
 </head>
 
-<body>
+<body bgcolor="sanidhya">
     <h1>Forms</h1>
     <form action="/tacos">
         <label for="Username">Type username</label>
